update NEWS file

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,11 +1,21 @@
 
+CHANGES IN VERSION 1.11.2
+--------------------------
 
+USER-LEVEL CHANGES
+
+    o when coordinates are used,
+      remove genes with multiple gene-coordinates
+      (coordinates are used when the familiy-wise error rate is
+      corrected for gene length or spatial clustering of genes)
+      
+      
 CHANGES IN VERSION 1.11.1
 --------------------------
 
 NEW FEATURES
 
-    o allow for custom gene coordinates
+    o allow for custom gene-coordinates
       (alternative to integrated coordinates;
       coordinates are used when the familiy-wise error rate is
       corrected for gene length or spatial clustering of genes)
