--- a/vignettes/ABAEnrichment.Rmd
+++ b/vignettes/ABAEnrichment.Rmd
@@ -135,7 +135,7 @@ fwers_3 = fwers_devel[fwers_devel[,1]==3, ]
 head(fwers_3)
 ```
 
-The rows in the output data frame are ordered by `age_category`, `n_significant`, `min_FWER` and `mean_FWER`; with e.g. `min_FWER` denoting the minimum FWER for enrichment of expressed candidate genes in that brain region across all expression cutoffs.
+The rows in the output data frame are ordered by `n_significant`, `min_FWER` and `mean_FWER`, `age_category` and `structure_id`; with e.g. `min_FWER` denoting the minimum FWER for enrichment of expressed candidate genes in that brain region across all expression cutoffs.
 'n_significant' reports the number of cutoffs at which the FWER was below 0.05.
 The column `FWERs` lists the individual FWERs for each cutoff.  
 The column `equivalent_structures` lists brain regions with identical expression data due to lack of independent expression measurements in all regions.
