--- a/vignettes/ABAEnrichment.Rmd
+++ b/vignettes/ABAEnrichment.Rmd
@@ -563,7 +563,7 @@ sessionInfo()
 (Internet). Available from: [http://brainspan.org/]
 
 [5] Pruefer, K. et al. (2007) FUNC: A package for detecting significant associations between gene
-sets and ontological annotations, BMC Bioinformatics 8: 41. \doi{10.1186/1471-2105-8-41} haha 
+sets and ontological annotations, BMC Bioinformatics 8: 41. \doi{10.1186/1471-2105-8-41}
 [https://doi.org/10.1186/1471-2105-8-41]
 
 [6] McDonald, J. H. Kreitman, M. (1991). Adaptive protein evolution at the Adh locus in Drosophila, Nature 351: 652-654. [https://doi.org/10.1038/351652a0]
